--- a/views/list.ejs
+++ b/views/list.ejs
@@ -7,8 +7,13 @@
     <title>To Do List</title>
 </head>
 <body>
-    <h1>Its a <%= kindOfDay %>!</h1>
-    
+
+  <%  if (kindOfDay === 'Saturday' || kindOfDay === 'Sunday') { %>
+        <h1 style="color: purple"><%= kindOfDay %> ToDo List</h1>
+<%} else { %>
+        <h1 style="color: red"><%= kindOfDay %> ToDo List</h1>
+   <% } %>
+
     
 </body>
 </html>
