--- a/views/list.ejs
+++ b/views/list.ejs
@@ -8,11 +8,19 @@
 </head>
 <body>
 
-  <%  if (kindOfDay === 'Saturday' || kindOfDay === 'Sunday') { %>
-        <h1 style="color: purple"><%= kindOfDay %> ToDo List</h1>
-<%} else { %>
-        <h1 style="color: red"><%= kindOfDay %> ToDo List</h1>
-   <% } %>
+  <h1> <%= kindOfDay %> </h1>
+
+  <ul>
+      <li>Buy Food</li>
+      <li>Cook Food</li>
+      <li>Eat Food</li>
+  </ul>
+
+  <form class="" action="/" method="POST"> 
+    <input type="text" name="newItem">
+    <button type="submit" name="button">Add</button>
+
+  </form>
 
     
 </body>
