--- a/views/list.ejs
+++ b/views/list.ejs
@@ -8,22 +8,29 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+        <div class="box" id="heading">
+            <h1> <%= kindOfDay %> </h1>
+        </div>
 
-  <h1> <%= kindOfDay %> </h1>
+            <div class="box">
+                <% for (var i = 0; i < newListItems.length; i++ ) { %>
+                    <div class="item">
+                        <input type="checkbox">
+                        <p><%=  newListItems[i]  %></p>
+                    </div>
+                    
+                <% } %> 
+                <form class="" action="/" method="POST"> 
+                    <input type="text" name="newItem" placeholder="New Item" autocomplete="off">
+                    <button type="submit" name="button">+</button>
+                
+                  </form>
+            
+        </div>
 
-  <ul>
-    
-    <% for (var i = 0; i < newListItems.length; i++ ) { %>
-        <li><%=  newListItems[i]  %></li>
-    <% } %>
+  
 
-  </ul>
-
-  <form class="" action="/" method="POST"> 
-    <input type="text" name="newItem">
-    <button type="submit" name="button">Add</button>
-
-  </form>
+  
 
     
 </body>
