--- a/views/list.ejs
+++ b/views/list.ejs
@@ -9,7 +9,7 @@
 </head>
 <body>
         <div class="box" id="heading">
-            <h1> <%= kindOfDay %> </h1>
+            <h1> <%= listTitle %> </h1>
         </div>
 
             <div class="box">
@@ -22,7 +22,7 @@
                 <% } %> 
                 <form class="" action="/" method="POST"> 
                     <input type="text" name="newItem" placeholder="New Item" autocomplete="off">
-                    <button type="submit" name="button">+</button>
+                     <button type="submit" name="list" value=<%= listTitle %>>+</button>
                 
                   </form>
             
